cluster/apps/home/homeassistant/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: home
  labels:
    app: homeassistant
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8123
            failureThreshold: 3
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8123
            failureThreshold: 3
            timeoutSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 8123
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant-config
