cluster/apps/home/homeassistant/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: home
  annotations:
    lbipam.cilium.io/ips: 192.168.3.62
spec:
  type: LoadBalancer
  selector:
    app: homeassistant
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8123
