cluster/apps/home/homeassistant/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-http
  namespace: home
spec:
  hostnames:
    - ha.btkostner.network
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homeassistant
          port: 8123
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
